--- a/EV_Adoption_Forecasting.ipynb
+++ b/EV_Adoption_Forecasting.ipynb
@@ -26,6 +26,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **EV Adoption Forecasting**\n",
+        "\n",
+        "As electric vehicle (EV) adoption surges, urban planners need to anticipate infrastructure needs—especially charging stations. Inadequate planning can lead to bottlenecks, impacting user satisfaction and hindering sustainability goals.\n",
+        "\n",
+        "**Problem Statement**: Using the electric vehicle dataset (which includes information on EV populations, vehicle types, and possibly historical charging usage), create a model to forecast future EV adoption. For example, predict the number of electric vehicles in upcoming years based on the trends in the data.\n",
+        "\n",
+        "**Goal**: Build a regression model that forecasts future EV adoption demand based on historical trends in EV growth, types of vehicles, and regional data.\n",
+        "\n",
+        "**Dataset**: This dataset shows the number of vehicles that were registered by Washington State Department of Licensing (DOL) each month. The data is separated by county for passenger vehicles and trucks.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Date: Counts of registered vehicles are taken on this day (the end of this month). - 2017-01-31 2024-02-29\n",
+        "*   County: This is the geographic region of a state that a vehicle's owner is listed to reside within. Vehicles registered in Washington\n",
+        "\n",
+        "\n",
+        "*   State: This is the geographic region of the country associated with the record. These addresses may be located in other\n",
+        "\n",
+        "*   Vehicle Primary Use: This describes the primary intended use of the vehicle.(Passenger-83%, Truck-17%)\n",
+        "\n",
+        "*   Battery Electric Vehicles (BEVs): The count of vehicles that are known to be propelled solely by an energy derived from an onboard electric battery.\n",
+        "*   Plug-In Hybrid Electric Vehicles (PHEVs): The count of vehicles that are known to be propelled from energy partially sourced from an onboard electric battery\n",
+        "\n",
+        "\n",
+        "*   Electric Vehicle (EV) Total: The sum of Battery Electric Vehicles (BEVs) and Plug-in Hybrid Electric Vehicles (PHEVs).\n",
+        "    \n",
+        "\n",
+        "\n",
+        "*   Non-Electric Vehicle Total: The count of vehicles that are not electric vehicles.\n",
+        "\n",
+        "*   Total Vehicles: All powered vehicles registered in the county. This includes electric vehicles.\n",
+        "*   Percent Electric Vehicles: Comparison of electric vehicles versus their non-electric counterparts.\n",
+        "\n",
+        "   **Dataset Link**: (https://www.kaggle.com/datasets/sahirmaharajj/electric-vehicle-population-size-2024/data)\n"
+      ],
+      "metadata": {
+        "id": "BYYTQMd7ygZK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#import libraries\n",
@@ -47,6 +90,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Load Dataset"
+      ],
+      "metadata": {
+        "id": "PbHOK8iW25Mv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Load dataset\n",
@@ -57,6 +109,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Explore and Understand the Data"
+      ],
+      "metadata": {
+        "id": "zt3sGpqA3SaM"
+      }
     },
     {
       "cell_type": "code",
@@ -197,6 +258,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Check if any column contain outliers.**"
+      ],
+      "metadata": {
+        "id": "PwsWMCdg3caM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Compute Q1 and Q3\n",
@@ -233,6 +303,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Data Preprocessing\n",
+        "\n",
+        "  Basic Data Cleaning\n"
+      ],
+      "metadata": {
+        "id": "s1PHgXsh3kNH"
+      }
     },
     {
       "cell_type": "code",
@@ -663,6 +745,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Convert all count columns to numeric (in case they are strings)"
+      ],
+      "metadata": {
+        "id": "pjSJDo4p3_0M"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "cols_to_convert = [\n",
@@ -1049,6 +1140,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Identifying counties with most number of EVs"
+      ],
+      "metadata": {
+        "id": "7xBN24EE4Mrn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Most EVs by County\n",
@@ -1087,6 +1187,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Sum of the vehicles in different categories"
+      ],
+      "metadata": {
+        "id": "AAEn4oG04m0k"
+      }
     },
     {
       "cell_type": "code",
@@ -1139,6 +1248,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Feature engineering"
+      ],
+      "metadata": {
+        "id": "uaT7dhPi4ucr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Feature Engineering\n",
@@ -1159,6 +1277,35 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Sorting by ['County', 'Date'] is essential before using groupby().shift() to ensure accurate lag feature creation.\n",
+        "\n",
+        "Let's creates lag features: ev_total_lag1, ev_total_lag2, ev_total_lag3\n",
+        "\n",
+        "Each one represents the EV total in previous months, specifically:\n",
+        "\n",
+        "  **Feature Meaning**\n",
+        "\n",
+        "\n",
+        "*   ev_total_lagX: How many EVs were registered X months ago\n",
+        "\n",
+        "*   ev_total_roll_mean_3: Smoother average of EV total over the past 3 months\n",
+        "*   ev_total_pct_change_1: Monthly growth rate (e.g., from 100 → 120 = +20%)\n",
+        "\n",
+        "\n",
+        "*   ev_total_pct_change_3: 3-month growth trend (captures momentum)\n",
+        "\n",
+        "\n",
+        "  It does this for each county independently using groupby('County').\n"
+      ],
+      "metadata": {
+        "id": "AzP9V3875awf"
+      }
     },
     {
       "cell_type": "code",
@@ -1193,6 +1340,29 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "In time-series forecasting, past values often influence future ones. Lag features allow your model to learn trends like: \"If EV count increased in the last 3 months, it’s likely to keep increasing.\"\n",
+        "\n",
+        "These lagged values act as predictive memory of the system.\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   ev_growth_slope - Trend in cumulative EV count over 6 months for early-stage EV adoption\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "    \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "H5S_nSI56gn6"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Cumulative EV count per county\n",
@@ -1208,6 +1378,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can also introduce the acceleration, If **slope = rate of growth**, acceleration = rate of change of slope. It helps to understand whether the growth is speeding up or slowing down — very useful in S-curve adoption(describes how a new product or technology's adoption progresses over time). Since Our data is small for a county we will not introduce it."
+      ],
+      "metadata": {
+        "id": "z9qTqLut6-6D"
+      }
     },
     {
       "cell_type": "code",
@@ -2130,6 +2309,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Model Selection\n",
+        "\n",
+        "Type of Problem: Regression Problem - Predicting continuous values like 'Electric Vehicle (EV) Total'\n",
+        "\n",
+        "Algorithms Considered: Random Forest Regressor\n",
+        "\n",
+        "Chosen Model: Random Forest for its robustness and ability to model non-linear relationships.\n",
+        "\n",
+        "Model Training, Tuning and Optimization Why Tuning?\n",
+        "\n",
+        "\n",
+        "*  Improves performance by finding the best model parameters.\n",
+        "\n",
+        "Techniques:\n",
+        "\n",
+        "*   RandomizedSearchCV for hyperparameter tuning.\n",
+        "\n",
+        "*   Cross-validation to avoid overfitting.\n",
+        "\n",
+        "\n",
+        "\n",
+        "    \n",
+        "\n",
+        "    \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Ezk818OI7VwV"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Model Selection\n",
@@ -2544,6 +2757,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Model Evaluation\n",
+        "\n",
+        "Evaluation Metrics:\n",
+        "\n",
+        "*   Mean Squared Error (MSE) – Penalizes larger errors.\n",
+        "*   R² Score – Measures goodness of fit.\n"
+      ],
+      "metadata": {
+        "id": "OAnAX9ql7_HA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Model Evaluation\n",
@@ -2943,6 +3171,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Get Feature Importance**"
+      ],
+      "metadata": {
+        "id": "cb7WlRoPDjo4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Get Feature Importance\n",
@@ -2979,6 +3216,50 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Top Features:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   ev_total_lag2 is the most influential feature, indicating that the EV count from two months prior is the strongest predictor of future EV adoption.\n",
+        "\n",
+        "*   ev_total_lag1 and ev_growth_slope also have high importance, reflecting that recent trends and growth trajectories significantly affect predictions.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Moderately Important:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   ev_total_pct_change_1 (recent percentage change) and ev_total_lag3 (three-month lag) play supporting roles in forecasting.\n",
+        "\n",
+        "*   ev_total_pct_change_3 has a smaller, yet noticeable impact.\n",
+        "\n",
+        "\n",
+        "Least Important:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   months_since_start, county_encoded, and ev_total_roll_mean_3 contribute very little to the model. This suggests that time index and county encoding have minimal standalone predictive value, and short rolling averages are less informative compared to lag features.\n",
+        "\n",
+        "\n",
+        "Overall, the chart highlights that lag-based features and recent growth patterns are the most effective predictors of EV adoption in this model setup.\n",
+        "\n",
+        "A good growth rate, especially in technology, is subjective and depends on the specific context, but generally, anything above 10% per year is considered a strong growth rate. In the electric vehicle (EV) market, as per Fortune [Business Insights](https://www.fortunebusinessinsights.com/industry-reports/electric-vehicle-market-101678) suggests a 13.8% CAGR between 2024 and 2032.\n",
+        "Forecasting with Regression Model for Next 3 Years\n",
+        "\n",
+        "\n",
+        "# Forecasting total eletric vehicles for a specific county (e.g., Clark)\n",
+        "\n",
+        "**Forecasting total eletric vehicles for a specific county (e.g., Clark)**\n"
+      ],
+      "metadata": {
+        "id": "G6v7_mWnD0aV"
+      }
     },
     {
       "cell_type": "code",
@@ -3237,6 +3518,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "  From 2020 to the end of 2023, Kings County experienced a steady and accelerating growth in EV adoption. The cumulative count increased consistently, indicating a positive trend in EV acceptance among residents.\n",
+        "\n",
+        "  The forecast projects a continued linear growth in EV adoption from 2024 through 2027. The projection suggests no significant slowdown, with the cumulative EV count potentially doubling within this period.\n",
+        "\n",
+        "  This anticipated growth may require expanded EV infrastructure, including charging stations, grid upgrades, and maintenance services to support the rising demand.\n",
+        "\n",
+        "\n",
+        "  **Forecasting for Top-5 Counties**\n"
+      ],
+      "metadata": {
+        "id": "mSLmw07DFCci"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Forecasting for Top-5 countries\n",
@@ -3377,6 +3675,54 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "The graph compares the historical and projected cumulative electric vehicle (EV) adoption trends for the top 5 U.S. counties—Santa Clara, Fairfax, Orange, Honolulu, and Los Angeles—from around 2017 to 2027.\n",
+        "\n",
+        "🔍 Key Observations:\n",
+        "\n",
+        "\n",
+        "\n",
+        "  *   Santa Clara County (Purple Line):\n",
+        "  *   Leads in EV adoption overall.\n",
+        "\n",
+        "  *   Demonstrates a strong and steady growth trajectory, continuing into the forecast period.\n",
+        "\n",
+        "  *   Fairfax County (Blue Line):\n",
+        "\n",
+        "  *   Shows consistent acceleration, overtaking others around 2025.\n",
+        "  *   Orange County (Red Line):\n",
+        "\n",
+        "\n",
+        "  *   Had a rapid growth phase, but its forecast shows flattening after 2024.\n",
+        "\n",
+        "\n",
+        "  *   Honolulu County (Orange Line):\n",
+        "\n",
+        "\n",
+        "  *    Exhibits moderate but stable growth, suggesting steady but slower adoption.\n",
+        "\n",
+        "  *   May reflect geographical constraints or limited incentives.\n",
+        "  *    Los Angeles County (Green Line):\n",
+        "\n",
+        "\n",
+        "  *   Adoption started later but shows strong upward momentum.\n",
+        "\n",
+        "  *   The forecast predicts continued growth but at a slower rate than Santa Clara or Fairfax.\n",
+        "\n",
+        "\n",
+        "\n",
+        "  Santa Clara and Fairfax are expected to dominate EV adoption through 2027, with both maintaining strong momentum. Meanwhile, Orange County may face a plateau, and Honolulu and Los Angeles will likely continue on steady but less aggressive growth trajectories. These trends can inform regional planning, charging infrastructure deployment, and policy decisions tailored to each county's adoption pace.\n",
+        "\n",
+        "#  Final Model Testing and Saving the Model\n"
+      ],
+      "metadata": {
+        "id": "WYGHAiALFsTy"
+      }
     },
     {
       "cell_type": "code",
